--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-hook-form": "^7.39.3",
+    "react-images-uploading": "^3.1.7",
     "react-redux": "^8.0.5",
+    "react-responsive-modal": "^6.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
+    "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
