--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-hook-form": "^7.39.3",
+    "react-hot-toast": "^2.4.0",
     "react-images-uploading": "^3.1.7",
     "react-redux": "^8.0.5",
     "react-responsive-modal": "^6.2.0",
@@ -24,7 +25,9 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^8.4.4",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
