--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.0",
     "@tanstack/react-query": "^4.15.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -24,9 +27,11 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "recharts": "^2.1.16",
     "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.4.4",
+    "uuid": "^9.0.0",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
