--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.1.3",
     "daisyui": "^2.39.1",
     "firebase": "^9.14.0",
+    "i": "^0.3.7",
+    "npm": "^9.1.2",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
