--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "npm": "^9.1.2",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-hook-form": "^7.39.3",
