--- a/package.json
+++ b/package.json
@@ -1,39 +1,38 @@
 {
-  "name": "jucundu-streaming",
+  "name": "rental",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-tailwind/react": "^1.2.4",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.0",
+    "@mui/x-date-pickers": "^5.0.11",
     "@reduxjs/toolkit": "^1.9.0",
     "@tanstack/react-query": "^4.15.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.0.7",
     "autoprefixer": "^9.8.8",
     "axios": "^1.1.3",
-    "daisyui": "^2.39.1",
+    "dayjs": "^1.11.7",
     "firebase": "^9.14.0",
     "i": "^0.3.7",
+    "moment": "^2.29.4",
     "npm": "^9.1.2",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.3.5",
     "react-hook-form": "^7.39.3",
-    "react-hot-toast": "^2.4.0",
-    "react-images-uploading": "^3.1.7",
     "react-redux": "^8.0.5",
-    "react-responsive-modal": "^6.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "recharts": "^2.1.16",
     "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
-    "swiper": "^8.4.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
