--- a/package.json
+++ b/package.json
@@ -20,17 +20,22 @@
     "dayjs": "^1.11.7",
     "firebase": "^9.14.0",
     "i": "^0.3.7",
+    "libphonenumber-js": "^1.10.15",
+    "material-ui-phone-number": "^3.0.0",
     "moment": "^2.29.4",
+    "mui-one-time-password-input": "^1.0.3",
     "npm": "^9.1.2",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.3",
+    "react-read-otp": "^1.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-swipeable-views": "^0.14.0",
     "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
     "uuid": "^9.0.0",
