--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-swipeable-views": "^0.14.0",
     "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
+    "tesseract.js": "^4.0.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
