--- a/package.json
+++ b/package.json
@@ -5,22 +5,31 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^1.2.4",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
+    "@mui/styles": "^5.11.1",
     "@mui/x-date-pickers": "^5.0.11",
+    "@reach/combobox": "^0.18.0",
+    "@react-google-maps/api": "^2.17.1",
     "@reduxjs/toolkit": "^1.9.0",
     "@tanstack/react-query": "^4.15.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.0.7",
+    "3d-react-carousal": "^5.0.0",
     "autoprefixer": "^9.8.8",
+    "autosuggest-highlight": "^3.3.4",
     "axios": "^1.1.3",
     "dayjs": "^1.11.7",
     "firebase": "^9.14.0",
+    "googleapis": "^110.0.0",
     "i": "^0.3.7",
     "libphonenumber-js": "^1.10.15",
+    "lodash.throttle": "^4.1.1",
     "material-ui-phone-number": "^3.0.0",
     "moment": "^2.29.4",
     "mui-one-time-password-input": "^1.0.3",
@@ -35,10 +44,15 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-slideshow-image": "^4.1.1",
+    "react-spring": "^9.6.1",
     "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "redux": "^4.2.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^8.4.5",
     "tesseract.js": "^4.0.2",
+    "use-places-autocomplete": "^4.0.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
