--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.1.3",
     "dayjs": "^1.11.7",
     "firebase": "^9.14.0",
+    "framer-motion": "^10.11.2",
     "googleapis": "^110.0.0",
     "i": "^0.3.7",
     "libphonenumber-js": "^1.10.15",
