--- a/package.json
+++ b/package.json
@@ -1,61 +1,37 @@
 {
-  "name": "rental",
+  "name": "rainbow",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.126",
     "@mui/material": "^5.11.0",
     "@mui/styles": "^5.11.1",
-    "@mui/x-date-pickers": "^5.0.11",
-    "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.17.1",
-    "@reduxjs/toolkit": "^1.9.0",
-    "@tanstack/react-query": "^4.15.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "3d-react-carousal": "^5.0.0",
-    "autoprefixer": "^9.8.8",
-    "autosuggest-highlight": "^3.3.4",
-    "axios": "^1.1.3",
-    "dayjs": "^1.11.7",
     "firebase": "^9.14.0",
     "framer-motion": "^10.11.2",
-    "googleapis": "^110.0.0",
-    "i": "^0.3.7",
-    "libphonenumber-js": "^1.10.15",
-    "lodash.throttle": "^4.1.1",
-    "material-ui-phone-number": "^3.0.0",
-    "moment": "^2.29.4",
-    "mui-one-time-password-input": "^1.0.3",
-    "npm": "^9.1.2",
-    "postcss": "^8.4.19",
+    "google-map-react": "^2.2.0",
+    "gsap": "^3.11.5",
     "react": "^18.2.0",
-    "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.39.3",
-    "react-read-otp": "^1.0.0",
-    "react-redux": "^8.0.5",
+    "react-fast-marquee": "^1.3.5",
+    "react-floating-whatsapp": "^5.0.8",
+    "react-particles": "^2.9.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
-    "react-slideshow-image": "^4.1.1",
     "react-spring": "^9.6.1",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
-    "redux": "^4.2.0",
-    "slick-carousel": "^1.8.1",
-    "socket.io-client": "^4.5.4",
-    "swiper": "^8.4.5",
-    "tesseract.js": "^4.0.2",
-    "use-places-autocomplete": "^4.0.0",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "react-vertical-timeline-component": "^3.6.0",
+    "react-whatsapp-button": "^2.0.0",
+    "tsparticles": "^2.9.3",
+    "web-vitals": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
