--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^10.11.2",
     "google-map-react": "^2.2.0",
     "gsap": "^3.11.5",
+    "moving-letters": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
